[mlir][standalone] Introduce binary dir variable
Introduces `STANDALONE_BINARY_DIR` to be used in the `lit.cfg.in`, as
`@CMAKE_BINARY_DIR@` points to the wrong directory if building via the
external projects mechanism.

--- a/mlir/examples/standalone/CMakeLists.txt
+++ b/mlir/examples/standalone/CMakeLists.txt
@@ -37,10 +37,11 @@ if(MLIR_ENABLE_BINDINGS_PYTHON)
 endif()
 
 set(STANDALONE_SOURCE_DIR ${PROJECT_SOURCE_DIR})
+set(STANDALONE_BINARY_DIR ${PROJECT_BINARY_DIR})
 include_directories(${LLVM_INCLUDE_DIRS})
 include_directories(${MLIR_INCLUDE_DIRS})
 include_directories(${STANDALONE_SOURCE_DIR}/include)
-include_directories(${PROJECT_BINARY_DIR}/include)
+include_directories(${STANDALONE_BINARY_DIR}/include)
 link_directories(${LLVM_BUILD_LIBRARY_DIR})
 add_definitions(${LLVM_DEFINITIONS})
 
